# tinyrust

./: Cargo.toml
assets/: collatz.asm  collatz.tr  collatz_v0.tr  collatz_v1.tr  fib.tr  test.tape  test.tr
ckc/: Cargo.toml
ckc-prover/: Cargo.toml
ckc-prover/src/: lib.rs
ckc-verifier/: Cargo.toml
ckc-verifier/src/: lib.rs
ckc/src/: lib.rs  proof.rs  prover.rs  stats.rs  verifier.rs  vm.rs
src/: main.rs  parser.rs  vm.rs
tinyvm/: Cargo.toml
tinyvm/src/: lib.rs  parser.rs  vm.rs
