[package]
edition = "2021"
name = "tinyvm"
version = "0.1.0"

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
tracing = "0.1.29"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.1"

[dev-dependencies]
sha-1 = "0.9.8"
